--- a/test/unit_test/CMakeLists.txt
+++ b/test/unit_test/CMakeLists.txt
@@ -55,3 +55,4 @@ foreach(UNIT_TEST_FILE ${UNIT_TESTS})
     target_include_directories(${TEST_TARGET} PRIVATE ${PROJECT_SOURCE_DIR}/test/common)
     gtest_discover_tests(${TEST_TARGET} DISCOVERY_MODE PRE_TEST)
 endforeach()
+target_compile_options(test_bluestein PRIVATE -Wconversion -Werror)
